@@ -3125,7 +3125,8 @@ body.template-recently_modified_view [class*="contenttype-opengever-"]:before { 
 [class*="icon-"] { display: inline-block; width: 24px; line-height: 22px; padding: 0; background-repeat: no-repeat; background-size: 22px; background-position: 0 0; background-image: url("data:image/svg+xml;charset=US-ASCII,%3C%3Fxml%20version%3D%221.0%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20xmlns%3Axlink%3D%22http%3A//www.w3.org/1999/xlink%22%20id%3D%22Layer_1%22%20data-name%3D%22Layer%201%22%20viewBox%3D%220%200%2024%2024%22%20width%3D%2224%22%20height%3D%2224%22%3E%0A%20%20%3Cdefs%3E%0A%20%20%20%20%3ClinearGradient%20id%3D%22linear-gradient%22%20x1%3D%22-220.89%22%20y1%3D%22347.14%22%20x2%3D%22-221.03%22%20y2%3D%22339.49%22%20gradientTransform%3D%22matrix%282.83%2C%200%2C%200%2C%20-2.83%2C%20638.34%2C%20984.89%29%22%20gradientUnits%3D%22userSpaceOnUse%22%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%220%22%20stop-color%3D%22%23fff%22/%3E%0A%20%20%20%20%20%20%3Cstop%20offset%3D%221%22%20stop-color%3D%22%23e2e2e2%22/%3E%0A%20%20%20%20%3C/linearGradient%3E%0A%20%20%20%20%3ClinearGradient%20id%3D%22linear-gradient-2%22%20x1%3D%22-191.85%22%20y1%3D%22345.33%22%20x2%3D%22-190.79%22%20y2%3D%22346.4%22%20gradientTransform%3D%22matrix%282.83%2C%200%2C%200%2C%20-2.83%2C%20559.59%2C%20984.89%29%22%20xlink%3Ahref%3D%22%23linear-gradient%22/%3E%0A%20%20%3C/defs%3E%0A%20%20%3Ctitle%3Eblank%3C/title%3E%0A%20%20%3Cg%20id%3D%22g18954%22%3E%0A%20%20%20%20%3Cpath%20id%3D%22path12658%22%20d%3D%22M3%2C23.25V0.75H16.5L21%2C5.25v18H3Z%22%20style%3D%22fill%3Aurl%28%23linear-gradient%29%22/%3E%0A%20%20%20%20%3Crect%20id%3D%22rect12968%22%20width%3D%2224%22%20height%3D%2224%22%20style%3D%22fill%3Anone%22/%3E%0A%20%20%20%20%3Crect%20id%3D%22rect12970%22%20x%3D%223.75%22%20y%3D%2223.25%22%20width%3D%2217.25%22%20height%3D%220.75%22%20style%3D%22fill%3A%23818181%3Bopacity%3A0.5%3Bisolation%3Aisolate%22/%3E%0A%20%20%20%20%3Crect%20id%3D%22rect12972%22%20x%3D%2221%22%20y%3D%226%22%20width%3D%220.75%22%20height%3D%2218%22%20style%3D%22fill%3A%23818181%3Bopacity%3A0.5%3Bisolation%3Aisolate%22/%3E%0A%20%20%20%20%3Crect%20id%3D%22rect12974%22%20x%3D%2216.5%22%20y%3D%226%22%20width%3D%224.5%22%20height%3D%220.75%22%20style%3D%22fill%3A%23818181%3Bopacity%3A0.5%3Bisolation%3Aisolate%22/%3E%0A%20%20%20%20%3Cpath%20id%3D%22path12977%22%20d%3D%22M21.75%2C6L21%2C5.25V6h0.75Z%22%20style%3D%22fill%3A%23818181%3Bopacity%3A0.5%3Bisolation%3Aisolate%22/%3E%0A%20%20%20%20%3Cpath%20id%3D%22path12979%22%20d%3D%22M15.75%2C6L16.5%2C6.75V6H15.75Z%22%20style%3D%22fill%3A%23818181%3Bopacity%3A0.5%3Bisolation%3Aisolate%22/%3E%0A%20%20%20%20%3Cpath%20id%3D%22path12981%22%20d%3D%22M3%2C23.25L3.75%2C24V23.25H3Z%22%20style%3D%22fill%3A%23818181%3Bopacity%3A0.5%3Bisolation%3Aisolate%22/%3E%0A%20%20%20%20%3Cpath%20id%3D%22path13611%22%20d%3D%22M15.75%2C0.75H16.5L21%2C5.25V6H15.75V0.75Z%22%20style%3D%22fill%3Aurl%28%23linear-gradient-2%29%22/%3E%0A%20%20%3C/g%3E%0A%3C/svg%3E%0A"); }
 [class*="icon-"] + span { display: inline-block; line-height: 22px; vertical-align: middle; }
 
-span[class*="icon-"] { vertical-align: middle; height: 22px; }
+span[class*="icon-"] { vertical-align: middle; height: 22px; width: auto; padding-left: 24px; }
+span[class*="icon-"] > span { display: inline-block; line-height: 22px; vertical-align: middle; }
 
 a[class*="icon-"] { width: auto; padding-left: 24px; }
 a[class*="icon-"] > span { display: inline-block; line-height: 22px; vertical-align: middle; }
